force-app/main/default/objects/Optional_Products_Opportunity__c/Optional_Products_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Optional Products for Opportunity</description>
    <label>Optional Products Opportunity</label>
    <nameField>
        <displayFormat>OPO-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optional Products Opportunity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>