force-app/main/default/objects/Optional_Products_Opportunity__c/fields/Allow_Custom_Image__c.field-meta.xml
<CustomField>
    <fullName>Allow_Custom_Image__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Custom Image</label>
    <type>Checkbox</type>
</CustomField>