force-app/main/default/objects/Optional_Products_Opportunity__c/fields/GL_Account_Variable_1__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 1</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Optional Products OpportunityVar1</relationshipLabel>
    <relationshipName>Optional_Products_OpportunityVar</relationshipName>
    <type>Lookup</type>
</CustomField>