force-app/main/default/objects/Optional_Products_Opportunity__c/fields/GL_Account_Variable_2__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 2</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Optional Products Opportunity (GL Account Variable 2)</relationshipLabel>
    <relationshipName>Optional_Products_Opportunityvar2</relationshipName>
    <type>Lookup</type>
</CustomField>