force-app/main/default/objects/Optional_Products_Opportunity__c/fields/GL_Account_Variable_3__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Variable_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GL Account Variable 3</label>
    <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
    <relationshipLabel>Optional Products Opportunity (GL Account Variable 3)</relationshipLabel>
    <relationshipName>Optional_Products_Opportunityvar3</relationshipName>
    <type>Lookup</type>
</CustomField>