force-app/main/default/objects/Optional_Products_Opportunity__c/fields/Item_Description__c.field-meta.xml
<CustomField>
    <fullName>Item_Description__c</fullName>
    <label>Item Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>