force-app/main/default/objects/Optional_Products_Opportunity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Optional Products Opportunity</relationshipLabel>
    <relationshipName>Optional_Products_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>