force-app/main/default/objects/Optional_Products_Opportunity__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Optional Products Opportunity</relationshipLabel>
    <relationshipName>Optional_Products_OpportunityProject</relationshipName>
    <type>Lookup</type>
</CustomField>