force-app/main/default/objects/Optional_Products_Opportunity__c/fields/QuantityLink__c.field-meta.xml
<CustomField>
    <fullName>QuantityLink__c</fullName>
    <formula>HYPERLINK(&apos;/apex/InventoryInformationPage?id=&apos;&amp;Product__c, TEXT(ROUND(Quantity__c,2)), &apos;_blank&apos;)</formula>
    <label>Quantity</label>
    <type>Text</type>
</CustomField>