force-app/main/default/objects/Optional_Products_Opportunity__c/fields/Size__c.field-meta.xml
<CustomField>
    <fullName>Size__c</fullName>
    <label>Size</label>
    <length>25</length>
    <type>Text</type>
</CustomField>