force-app/main/default/objects/Optional_Products_Opportunity__c/validationRules/Product_field_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_field_required</fullName>
    <active>true</active>
    <description>Product field required</description>
    <errorConditionFormula>IF( ISBLANK( Product__c ), true, false)</errorConditionFormula>
    <errorMessage>Please select a product.</errorMessage>
</ValidationRule>